# goit-ds-hw-02

./: create.sql  pyproject.toml  seed.py
