[tool.poetry]
name = "goit-ds-hw-02"
version = "0.1.0"
description = ""
authors = ["Olga Troino <otronity@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
faker = "^33.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
